--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,7 @@
 databases:
   - name: TheRialNews
-    databaseName: therialnews_twf6
-    user: therialnews_twf6_user
+    databaseName: TheRialNews
+    user: TheRialNews
     plan: free
 
 services:
